; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/wireless/brcm80211/brcmutil/extr_utils.c_brcmu_pktq_pdeq_tail.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/wireless/brcm80211/brcmutil/extr_utils.c_brcmu_pktq_pdeq_tail.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sk_buff = type { i32 }
%struct.pktq = type { i32, %struct.TYPE_2__* }
%struct.TYPE_2__ = type { %struct.sk_buff_head }
%struct.sk_buff_head = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.sk_buff* @brcmu_pktq_pdeq_tail(%struct.pktq* %0, i32 %1) #0 {
  %3 = alloca %struct.sk_buff*, align 8
  %4 = alloca %struct.pktq*, align 8
  %5 = alloca i32, align 4
  %6 = alloca %struct.sk_buff_head*, align 8
  %7 = alloca %struct.sk_buff*, align 8
  store %struct.pktq* %0, %struct.pktq** %4, align 8
  store i32 %1, i32* %5, align 4
  %8 = load %struct.pktq*, %struct.pktq** %4, align 8
  %9 = getelementptr inbounds %struct.pktq, %struct.pktq* %8, i32 0, i32 1
  %10 = load %struct.TYPE_2__*, %struct.TYPE_2__** %9, align 8
  %11 = load i32, i32* %5, align 4
  %12 = sext i32 %11 to i64
  %13 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %10, i64 %12
  %14 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %13, i32 0, i32 0
  store %struct.sk_buff_head* %14, %struct.sk_buff_head** %6, align 8
  %15 = load %struct.sk_buff_head*, %struct.sk_buff_head** %6, align 8
  %16 = call %struct.sk_buff* @skb_dequeue_tail(%struct.sk_buff_head* %15)
  store %struct.sk_buff* %16, %struct.sk_buff** %7, align 8
  %17 = load %struct.sk_buff*, %struct.sk_buff** %7, align 8
  %18 = icmp eq %struct.sk_buff* %17, null
  br i1 %18, label %19, label %20

19:                                               ; preds = %2
  store %struct.sk_buff* null, %struct.sk_buff** %3, align 8
  br label %26

20:                                               ; preds = %2
  %21 = load %struct.pktq*, %struct.pktq** %4, align 8
  %22 = getelementptr inbounds %struct.pktq, %struct.pktq* %21, i32 0, i32 0
  %23 = load i32, i32* %22, align 8
  %24 = add nsw i32 %23, -1
  store i32 %24, i32* %22, align 8
  %25 = load %struct.sk_buff*, %struct.sk_buff** %7, align 8
  store %struct.sk_buff* %25, %struct.sk_buff** %3, align 8
  br label %26

26:                                               ; preds = %20, %19
  %27 = load %struct.sk_buff*, %struct.sk_buff** %3, align 8
  ret %struct.sk_buff* %27
}

declare dso_local %struct.sk_buff* @skb_dequeue_tail(%struct.sk_buff_head*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
